[project]
name = "api.letsbuilda.dev"
description = "Public API for our projects"
authors = [{ name = "Bradley Reynolds", email = "bradley.reynolds@tailstory.dev" }]
license = "MIT"
requires-python = ">=3.14"
dynamic = ["version"]
dependencies = [
    # Core
    ## Metrics
    "sentry-sdk>=2.58.0",
    ## Settings and configuration
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    ## Web
    "gunicorn>=25.3.0",
    "uvicorn-worker>=0.4.0",
    "uvicorn[standard]>=0.46.0",
    "litestar[brotli]>=2.21.1",
    "imsosorry>=1.3.0",
]

[project.urls]
repository = "https://github.com/letsbuilda/api.letsbuilda.dev/"
documentation = "https://docs.letsbuilda.dev/api.letsbuilda.dev/"

[dependency-groups]
dev = [
    "nox>=2026.4.10",
    "prek>=0.3.10",
    "ruff>=0.15.11",
    "mypy>=1.20.2",
    "ty>=0.0.32",
]
tests = [
    "pytest>=9.0.3",
    "coverage>=7.13.5",
    "pytest-randomly>=4.1.0",
    "pytest-codspeed>=4.3.0",
]
docs = [
    "sphinx>=8.1.0",
    "furo>=2025.12.19",
    "sphinx-autoapi>=3.8.0",
    "releases>=2.1.1",
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic.version]
attr = "api.__version__"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "COM812", # (Missing trailing comma) - conflicts with formatter
    "CPY001", # (Missing copyright notice at top of file) - No license
    "S311",   # (Standard pseudo-random generators are not suitable for cryptographic purposes) - Not a crypto lib
]

[tool.ruff.lint.extend-per-file-ignores]
"docs/*" = [
    "INP001", # (File `tests/*.py` is part of an implicit namespace package. Add an `__init__.py`.) - Docs are not modules
]
"tests/*" = [
    "INP001", # (File `tests/*.py` is part of an implicit namespace package. Add an `__init__.py`.) - Tests are not modules
    "S101",   # (Use of `assert` detected) - Yes, that's the point
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
pretty = true

[tool.coverage.run]
branch = true
source_pkgs = ["api"]
source_dirs = ["tests"]

[tool.pytest]
strict = true
junit_family = "xunit1"
